polished chat area added paint utility

--- a/public/chat.html
+++ b/public/chat.html
@@ -8,8 +8,9 @@
 
 	<body>
 
-	
+	  <canvas id="drawing"></canvas>
 	  <div class="chatmain">
+	  	<h5>Chatroom</h5>
 		<div class="messages">
 			
 
@@ -17,11 +18,12 @@
 		</div>
 
 		<form id="message-form">
-				<input name="message" type="text">
+				<input name="message" type="text" class="messageinput">
 				<button>Send</button>
 		</form>
 	   </div>
-	 
+	   
+	  
 
 
 		
