--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
 	<head>
 
 		<link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles2.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	</head>
-	<body>
+<body style="background-color:black;">
+  <img id="bgmimick" src="/images/blackwhitebutterfly.jpg" />
 
 
+<canvas width=1000 height=500>
+</canvas>
 
 <div class="roomSection">
 
@@ -85,20 +89,13 @@
       </li>
     </ul>
   </form>
-  <form class="hsignupForm" action="#">
-  	<input type="hidden" class="usernameh">
-  	<input type="hidden" class="roomh">
-  </form>
-  <form class="csignupForm" action="#">
-  	<input type="hidden" class="usernamec">
-  	<input type="hidden" class="roomc">
-  	<input type="hidden" class="roomtype">
 </div>
 
 
 
 
 
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Great+Vibes" type='text/css'>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 		<script src="/js/libs/jquery-3.3.1.js"></script>
 		<script src="/js/libs/deparam.js"></script>
